--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
                                 para mais informações</a>
                         </a>
                     </div>
-                    <div id="noticia" class="ajeita">
+                    <div id="noticia">
                         <!--https://www.esporteinterativo.com.br/blogs/Presidente-do-Grmio-sobre-reflexos-da-Covid19-no-futebol-cenario-agora-e-devastador-20200416-0040.html-->
                         <a
                             href="https://www.esporteinterativo.com.br/blogs/Presidente-do-Grmio-sobre-reflexos-da-Covid19-no-futebol-cenario-agora-e-devastador-20200416-0040.html">
