--- a/sobre.html
+++ b/sobre.html
@@ -32,9 +32,9 @@
             <h3 id="name">Ryan da Silva Albuquerque - 18anos - Manaus/AM</h3>
             <h3><br>
                 Sou estudante de Engenharia Eletrica - Telecomunicações pela UFAM . Técnico em Eletrônica pela FMM. <br> Atualmente no bootcamp Hiring Coders na Gama Academy, e <br>
-                mergulhando e me aventurando na area de desenvolvimento de sofware.<br><br>
+                mergulhando e me aventurando na área de desenvolvimento de sofware.<br><br>
 
-                Com experiência, autoditada e projetinhos pessoais, em desenvolvimento de software com python, desenvolvimento web(front-end), embarcados (Arduino, Raspberry PI).<br><br>
+                Com pouca experiência, mas autoditada e com projetinhos pessoais, em desenvolvimento de software com python, desenvolvimento web(front-end), embarcados (Arduino, Raspberry PI).<br><br>
 
                 Conhecimentos em Python(Mediano), C(Básico) , JavaScript(Básico), HTML(Intermediário), CSS(Intermediário), BootStrap(Intermediário)<br><br>
 
